--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^1.0.1",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.9.4",
     "path": "^0.12.7",
     "sass-loader": "^7.1.0",
@@ -29,6 +30,7 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "@material-ui/core": "^3.3.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0"
   }
